--- a/config/example.config.json
+++ b/config/example.config.json
@@ -2,6 +2,7 @@
     "TOKEN": "",
     "MEDIA_ROLE": "",
     "YOUTUBE_API_KEY": "",
-    "MANAGER_ROLE": ""
+    "MANAGER_ROLE": "",
+    "STAFF_MANAGER_ROLE": ""
   }
   
