feat: remapped STAFF_MANAGER_ROLE -> STAFF_APPLICATION_MANAGER_ROLE

--- a/config/example.config.json
+++ b/config/example.config.json
@@ -1,8 +1,5 @@
 {
     "TOKEN": "",
-    "MEDIA_ROLE": "",
-    "YOUTUBE_API_KEY": "",
-    "MANAGER_ROLE": "",
-    "STAFF_MANAGER_ROLE": ""
+    "YOUTUBE_API_KEY": ""
   }
   
